@@ -1,8 +1,13 @@
-2004-11-03  ------ omnetpp-3.0a9 released ------
-
 FIXME todo: create parsim/ (and nedxml/?) subdirectories here
 cMessage: change prio() from int to short (2 bytes less)
 add deleteGate()
+
+2004-11-18  Andras Varga
+
+	* index.h: title page change; adjustments in doxygen comments in other
+	headers
+
+2004-11-03  ------ omnetpp-3.0a9 released ------
 
 2004-11-02  Andras Varga
 
